<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Accueil" >

    <TextView
        android:id="@+id/bienvenue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="@dimen/size" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nom_hint"
         />
    
    <EditText
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/prenom_hint"
         />

    <TextView
        android:id="@+id/atelier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/atelier" />

    <Spinner
        android:id="@+id/ateliers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt ="@string/atelier"
        android:entries="@array/ateliers_nom"
        
         />

    
    <Button 
         android:id="@+id/button_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_valider"
        />
</LinearLayout>
